# ChangeLog for dev-php/PEAR-Crypt_RC4
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Crypt_RC4/ChangeLog,v 1.33 2014/08/10 20:45:43 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  PEAR-Crypt_RC4-1.0.2-r1.ebuild, PEAR-Crypt_RC4-1.0.3.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  07 Aug 2013; Agostino Sarubbo <ago@gentoo.org> PEAR-Crypt_RC4-1.0.3.ebuild:
  Stable for x86, wrt bug #470422

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> PEAR-Crypt_RC4-1.0.3.ebuild:
  Stable for ppc64, wrt bug #470422

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> PEAR-Crypt_RC4-1.0.3.ebuild:
  Stable for ia64, wrt bug #470422

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> PEAR-Crypt_RC4-1.0.3.ebuild:
  Stable for sparc, wrt bug #470422

  31 Jul 2013; Jeroen Roovers <jer@gentoo.org> PEAR-Crypt_RC4-1.0.3.ebuild:
  Stable for HPPA (bug #470422).

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> PEAR-Crypt_RC4-1.0.3.ebuild:
  Stable for alpha, wrt bug #470422

  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org> PEAR-Crypt_RC4-1.0.3.ebuild:
  Stable for ppc, wrt bug #470422

  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org> PEAR-Crypt_RC4-1.0.3.ebuild:
  Stable for amd64, wrt bug #470422

*PEAR-Crypt_RC4-1.0.3 (24 Mar 2013)

  24 Mar 2013; Matti Bickel <mabi@gentoo.org> +PEAR-Crypt_RC4-1.0.3.ebuild:
  version bump

  05 Dec 2007; Markus Ullmann <jokey@gentoo.org>
  PEAR-Crypt_RC4-1.0.2-r1.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org>
  PEAR-Crypt_RC4-1.0.2-r1.ebuild:
  Fix LICENSE

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  21 May 2006; Luca Longinotti <chtekk@gentoo.org>
  -PEAR-Crypt_RC4-1.0.2.ebuild:
  Remove old-style PHP packages.

  17 Feb 2006; Aron Griffis <agriffis@gentoo.org>
  PEAR-Crypt_RC4-1.0.2-r1.ebuild:
  Mark 1.0.2-r1 stable on alpha/ia64. #119722
