@@ -1,11 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Crypt_RC4/PEAR-Crypt_RC4-1.0.2-r1.ebuild,v 1.16 2014/08/10 20:45:43 slyfox Exp $
-
-inherit php-pear-r1
-
-DESCRIPTION="Encryption class for RC4 encryption"
-LICENSE="PHP-2.02"
-SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 sparc x86"
-IUSE=""
