@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-Crypt_RC4
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Crypt_RC4/ChangeLog,v 1.33 2014/08/10 20:45:43 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Crypt_RC4/ChangeLog,v 1.34 2014/11/06 15:27:19 grknight Exp $
+
+  06 Nov 2014; Brian Evans <grknight@gentoo.org>
+  -PEAR-Crypt_RC4-1.0.2-r1.ebuild:
+  Drop old
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
   PEAR-Crypt_RC4-1.0.2-r1.ebuild, PEAR-Crypt_RC4-1.0.3.ebuild:
